--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "axios": "^0.20.0",
     "core-js": "^3.6.5",
     "uuid": "^8.3.0",
-    "vue": "^3.0.0-0"
+    "vue": "^3.0.0-0",
+    "vue-router": "^3.4.3"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.1.1",
